# macromap

./: main.py  pyproject.toml
macromaps-backend/: .gitignore  Dockerfile  MENU_PROCESSING.md  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
macromaps-backend/routes/menu/: __init__.py  menu.py
macromaps-backend/routes/restaurants/: __init__.py  restaurants.py
macromaps-backend/routes/scan/: __init__.py  scan.py
macromaps-backend/tasks/: __init__.py  menu_processing.py  restaurant_processing.py
macromaps-backend/tests/: example.json  menu_classification_test_results_1749132326.json  test_apify.py  test_menu_processing.py  test_models.py
macromaps-backend/utils/: __init__.py  apify_utils.py  llm_utils.py  mock_utils.py  supabase_utils.py
macromaps-frontend/: package-lock.json  package.json  pnpm-lock.yaml
macromaps-frontend/app/: layout.tsx  page.tsx
macromaps-frontend/app/results/: page.tsx
macromaps-frontend/app/upgrade/: page.tsx
macromaps-frontend/components/: location-search.tsx  map-component.tsx  menu-item-list.tsx  mobile-drawer.tsx  pro-feature-lock.tsx  radius-selector.tsx  restaurant-list.tsx
macromaps-frontend/components/auth/: auth-button.tsx  auth-provider.tsx
macromaps-frontend/hooks/: use-location.tsx  use-menu-items.ts  use-restaurants.ts
macromaps-frontend/lib/: api.ts  data-transformer.ts  supabase.ts
macromaps-frontend/public/: index.html
macromaps-frontend/src/: App.css  App.js
macromaps-frontend/types/: api-response.ts  global.d.ts  menu-item.ts  restaurant.ts
(+4 files in other folders)
