[project]
name = "macromaps-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "requests>=2.32.3",
    "apify-client>=1.10.0",
    "python-dotenv>=1.1.0",
    "openai>=1.51.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
]
